--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,43 @@
 version: '3.3'
 services:
-  db:
-    image: mysql:5.7
-    restart: always
+
+  # For PI
+services:
+  mariadb:
+    image: tobi312/rpi-mariadb:TAG    
+    volumes:
+      - ./mariadb:/var/lib/mysql    
     environment:
       MYSQL_DATABASE: '${DB_NAME}'
       MYSQL_USER: '${DB_USER}'
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+    restart: unless-stopped
     ports:
-      - '3306:3306'
-    expose:
-      - '3306'
-    volumes:
-      - my-db:/var/lib/mysql
-
+      - 3306:3306
+      
   adminer:
     image: adminer
     restart: always
     ports:
       - 8082:8080
+
+
+# NOT for PI
+#   db:
+#     image: mysql:5.7
+#     restart: always
+#     environment:
+#       MYSQL_DATABASE: '${DB_NAME}'
+#       MYSQL_USER: '${DB_USER}'
+#       MYSQL_PASSWORD: '${DB_PASSWORD}'
+#       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+#     ports:
+#       - '3306:3306'
+#     expose:
+#       - '3306'
+#     volumes:
+#       - my-db:/var/lib/mysql
     
-volumes:
-  my-db:
+# volumes:
+#   my-db:
